--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,32 @@
   margin-bottom: 8px;
   padding-bottom: 8px;
   border-bottom: 1px solid #d2d2d2;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-info {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  cursor: pointer;
+}
+
+.task-item-remove {
+  padding: 2px 5px;
+  border: 1px solid #ff000d;
+  background-color: #ae0505;
+  color: white;
+  box-shadow: 0px 1px 3px #666;
+  border-radius: 4px;
+}
+
+.task-completed {
+  text-decoration: line-through;
 }
 
 .task-checked {
   margin-right: 16px;
+  font-size: 24px;
+  color: #2d9100;
 }
